Agregamos los servicios de API con web rest y finalizacion del proyecto

--- a/galeriadefotos.html
+++ b/galeriadefotos.html
@@ -10,6 +10,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap https://fonts.googleapis.com/css2?family=Chivo:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="js/validaciones.js"></script>
         <title>All Stars - Compra de Artículos</title>
         <link rel="icon" href="img/head-logo.png">
     </head>
@@ -139,10 +141,42 @@
                     </div>
                 </div>  
             </div>
+            <br><br>
+    <!-- Ingreso de una api -->
+            <div class="row">
+                <div class="col-md">
+                        <h1>Tipos de monedas a CLP </h1>
+                    <br>
+                    <div class="cajaApi">
+                        <button type="button" id="solicitar">Solicitar Tipos de Monedas</button>
+                    
+                    <br><br>
+
+                    <table class="table" id="monedas">
+                        <thead>
+                            <tr>
+                                <th scope="col">Código</th>
+                                <th scope="col">Nombre De la Moneda</th>
+                                <th scope="col">Valor a Pesos Chilenos</th>
+                                
+                            </tr>
+                        </thead>
+                        <tbody>
+
+                        </tbody>
+
+                    </table>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
+
+
+
         <br><br>
         <!-- Script JQuery -->
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
